# otus_intensive_2205_raw

./: .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 63af727b18d6_create_geo_objects_tables.py
geo_objects/models/: base.py  country.py  region.py
models/: __init__.py  base.py  country.py  region.py  settlement.py
