[tool.poetry]
name = "intensive_otus_2205_raw"
version = "0.1.0"
description = ""
authors = ["avo888 <avoevodin8888@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {extras = ["postgres_asyncpg"], version = "^1.4.36"}
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
